--- a/TransactionSurcharge/Views/Home/IndexPost.cshtml
+++ b/TransactionSurcharge/Views/Home/IndexPost.cshtml
@@ -12,13 +12,13 @@
             @Html.DisplayNameFor(model => model.Amount)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.TransferAmount)
+            @Html.DisplayName("Transfer Amount")
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Charge)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.DebitAmount)
+            @Html.DisplayName("Debit Amount (Transfer Amount + Charge)")
         </th>
         <th></th>
     </tr>
