--- a/TransactionSurcharge/Views/Home/Index.cshtml
+++ b/TransactionSurcharge/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
         <div class="form-group">
             @Html.Label("Amount", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Value, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Value, new { htmlAttributes = new { @class = "form-control",min=1, max=int.MaxValue } })
                 @Html.ValidationMessageFor(model => model.Value, "", new { @class = "text-danger" })
             </div>
         </div>
